# libarcstk

./: .gitignore  API.md  BUILD.md  CMakeLists.txt  CODING.md  DESIGN.md  Doxyfile-mcss  Doxyfile-mcss.in  Doxyfile.in  README.md  TODO.md  VERSIONING.md  libarcs.pc.in  libarcstk-config.cmake.in  libarcstk.pc.in
cmake/: configure_file.cmake  update_mainpagemd.cmake  update_versioncpp.cmake
doc/: CMakeLists.txt  Doxyfile-mcss.in  Doxyfile.in  MAINPAGE.md  namespace-fix.sh
doc/texts/: MAINPAGE.md  MAINPAGE.md.in
examples/: README.md
examples/albumcalc/: .gitignore  README.md  albumcalc.cpp  makefile
examples/albumid/: .gitignore  README.md  albumid.cpp  albumverify.cpp  makefile
examples/albumverify/: .gitignore  README.md  albumverify.cpp  example_arid.txt  example_sums_fail.txt  example_sums_ok.txt  makefile
examples/arparse/: .gitignore  README.md  arparse.cpp  makefile
examples/audiocalc/: .gitignore  README.md  audiocalc.cpp  makefile
include/: accuraterip.hpp  algorithms.hpp  calculate.hpp  calculate2.hpp  checksum.hpp  dbar.hpp  identifier.hpp  logging.hpp  match.hpp  metadata.hpp  parse.hpp  policies.hpp  samples.hpp  verify.hpp  version.hpp
include/details/: builders.tpp  checksum.tpp  samples.tpp  validate.tpp
src/: accuraterip.cpp  accuraterip.hpp  appendableseq.hpp  calc_checksummap.hpp  calc_context.hpp  calc_partition.hpp  calc_state.hpp  calculate.cpp  calculate.hpp  calculate.tpp  calculate2.cpp  calculate2_details.hpp  calculate2_impl.hpp  calculate_apis.hpp  calculate_details.hpp  calculate_impl.hpp  checksum.cpp  checksum.hpp  checksum.tpp  checksum_details.hpp  checksumlist.tpp  dbar.cpp  dbar_details.hpp  identifier.cpp  identifier.hpp  identifier_details.hpp  iterable.hpp  logging.cpp  logging.hpp  match.cpp  match.hpp  matchers.hpp  metadata.cpp  metadata_conv.hpp  metadata_details.hpp  parse.cpp  parse.hpp  sampleblockiterator.tpp  samples.cpp  samples.hpp  (+5 more)
src/details/: calculate.tpp  checksum.tpp  samples.tpp
test/: CMakeLists.txt
test/data/: calculation-test-01.sha1  calculation-test-01.txt  calculation-test-02.sha1  calculation-test-02.txt  generate_testfiles_for_arparser.sh  samplesequence-test-01.sha1
test/src/: accuraterip.cpp  calculate.cpp  calculate2.cpp  calculate_calccontext.cpp  calculate_calculation.cpp  calculate_details.cpp  calculate_impl.cpp  checksum.cpp  checksum_checksumlist.cpp  checksum_details.cpp  checksum_types.cpp  dbar.cpp  dbar_details.cpp  identifier.cpp  identifier_arid.cpp  identifier_details.cpp  identifier_toc.cpp  main.test.cpp  match.cpp  metadata.cpp  metadata_conv.cpp  metadata_details.cpp  parse.cpp  samples.cpp  tk_version.cpp  verify.cpp  verify_details.cpp  version.cpp
